# visual-chunking

./: .editorconfig  .gitignore  LICENSE  README.md  config.py  pyproject.toml
evaluation/segmentation/chroma/: chroma.ipynb  chroma_adapter.py  chroma_setup.py
lib/: __init__.py  interface.py  logging.yaml  pipeline.py
lib/chunking/methods/: chunkers.py
lib/chunking/model/: document_chunker.py  token.py
lib/chunking/scripts/: chunk.py  get_chunker.py
lib/evaluation/: export_single_chunk.ipynb
lib/evaluation/parsing/: document_statistics.ipynb  export_time_statistics.ipynb  omni_doc_bench.py  publaynet.ipynb  publaynet.py  statistics.py  time_statistics.py
lib/evaluation/time/: export_time_statistics.ipynb  time_statistics.py
lib/parsing/: interface.py
lib/parsing/methods/: config.py  docling.py  llamaparse.py  mineru.py  parsers.py  unstructured.py  vlm.py  vlm_prompt.py
lib/parsing/model/: document_parser.py  options.py  parsing_result.py
lib/parsing/scripts/: annotate.py  get_parser.py  parse.py  postprocess.py  spans.py
lib/segmentation/methods/: chunkers.py  fixed_sized.py  hierarchical.py  recursive.py
lib/segmentation/model/: chunk.py  document_chunker.py
lib/utils/: annotate.py  chroma_export.py  create_dir.py  export_table.py  export_to_latex.py  f1_coco.py  get_parser_thesis_name.py  get_sentences.py  json_trim.py  max_min.py  merge_boxes.py  open.py  pdf_to_page_img.py  thesis_names.py  to_coco.py
parsing/: draw.py  interface.py  main.py
parsing/bounding-boxes/: schema.json
parsing/bounding-boxes/llamaparse/: schema.json
parsing/bounding-boxes/unstructured-io/: schema.json
parsing/datasets/: omni_doc_bench.py  omni_doc_schema.yaml
parsing/llamaparse/: main.py
parsing/methods/: config.py  docling.py  llamaparse.py  mineru.py  unstructured.py
parsing/methods/docling/: main.py  parser.py
parsing/methods/llamaparse/: parser.py
parsing/methods/unstructured_io/: parser.py
parsing/model/: document_parser.py  options.py  parsing_result.py  spans.py
parsing/scripts/: annotate.py  get_parser.py  parse.py  postprocess.py  spans.py
parsing/unstructured-io/: draw.py  main.py  pyproject.toml
segmentation/eval/: chroma.ipynb
segmentation/methods/: config.py  fixed_sized.py  hierarchical.py  recursive.py
segmentation/model/: chunk.py  document_chunker.py  token.py
thesis/: .gitignore  bibliography.bib  main.tex  settings.tex
thesis/chapters/: 00_examples.tex  01_introduction.tex  02_foundations.tex  03_datasets.tex  03_methodology.tex  04_methodology.tex  04_results.tex  05_discussion.tex  05_evaluation.tex  06_conclusion.tex  06_results.tex
thesis/figures/: example_table.tex
thesis/figures/code/: chunk.tex  chunking_result.tex  gemini_prompt.txt  omni_doc_bench_config.tex  parsing_bounding_box.tex  parsing_result.tex  rich_token.tex
thesis/pages/: abstract.tex  ai-usage.tex  appendix.tex  cover.tex  disclaimer.tex  glossary.tex  title.tex
utils/: create_dir.py  open.py
(+46 files in other folders)
