[project]
name = "visual-chunking"
version = "0.1.0"
description = "Evaluating and Enhancing Location-Aware Visual Document Segmentation for Oncology Guidelines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.26.4",
    "unstructured[local-inference,pdf]>=0.18.15",
    "python-dotenv>=1.1.1",
    "llama-cloud-services>=0.6.73",
    "docling>=2.61.1",
    "mineru[core]>=2.6.4",
    "chunking-evaluation",
    "sentence-transformers>=5.2.0",
    "pyyaml>=6.0.3",
    "google-genai>=1.56.0",
    "google-cloud-documentai>=3.7.0",
    "datasets>=4.4.2",
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "huggingface-hub>=0.36.0",
    "pillow>=11.3.0",
    "chromadb>=1.4.0",
    "docling-core>=2.57.0",
    "nltk>=3.9.2",
    "transformers>=4.57.3",
    "faster-coco-eval>=1.7.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "ruff>=0.14.10",
]

[tool.uv.sources]
chunking-evaluation = { git = "https://github.com/matteomrz/chunking_evaluation_fix.git" }

[tool.deptry.package_module_name_map]
pyyaml = "yaml"
python-dotenv = "dotenv"
google-genai = "google"
google-cloud-documentai = "google"
pillow = "PIL"
